--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*mr-*
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+*/.DS*
+*/.idea*
